# Relay

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  database.py  files.md  logging.py  nodes.py  pyproject.toml
app/: cli.py  main.py
app/agents/: coordinator.py  state.py
app/agents/decision/: __init__.py  decision_graph.py
app/agents/dependency/: __init__.py  dependency_graph.py  docker-compose.yml  graph.py
app/agents/onboarding/: __init__.py  onboarding_graph.py
app/agents/risk/: __init__.py  risk_graph.py
app/api/middleware/: request_context.py
app/api/routes/: agents.py  graph.py  health.py  ingestion.py
app/core/: config.py  database.py  llm.py  redis.py  security.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/db/models/: __init__.py  edges.py  embeddings.py
app/db/repositories/: __init__.py  base.py  edge_repository.py  node_repository.py
app/ingestion/: base_connector.py
app/ingestion/connectors/: __init__.py
app/ingestion/connectors/gdocs/: __init__.py  connector.py
app/ingestion/connectors/github/: __init__.py  connector.py
app/ingestion/connectors/jira/: __init__.py  connector.py
app/ingestion/connectors/slack/: __init__.py  connector.py
app/ingestion/processors/: embedding_processor.py
app/ingestion/queue/: tasks.py  worker.py
app/memory/retrieval/: retriever.py
app/memory/vector/: embedder.py
app/schemas/: __init__.py  agents.py  graph.py  health.py  ingestion.py
evals/: run_evals.py
evals/dataset/: answer_cases.json  retrieval_cases.json  routing_cases.json
evals/evaluators/: answers.py  retrieval.py  routing.py
infra/docker/: Dockerfile  Dockerfile.worker
infra/postgres/: init.sql
infra/redis/: redis.conf
opsgraph/: pyproject.toml
scripts/: seed_dev_data.py
tests/: conftest.py
tests/e2e/: test_health.py
tests/integration/: test_ingestion.py
tests/unit/: test_agents.py
