[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsgraph"
version = "0.1.0"
description = "Multi-agent AI system for operational graph modeling across teams"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    # fastapi is capped below 0.119 (starlette<1.0) because
    # prometheus-fastapi-instrumentator>=8.0 is incompatible with starlette>=1.0
    # (its route-name resolver doesn't handle starlette's `_IncludedRouter`).
    "fastapi>=0.111.0,<0.119",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # LLM
    "anthropic>=0.40.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # Redis / queues
    "redis[hiredis]>=5.0.0",
    "arq>=0.26.0",

    # Vector store
    "pgvector>=0.2.5",
    "sentence-transformers>=3.0.0",

    # Connectors
    "slack-sdk>=3.27.0",
    "PyGithub>=2.3.0",
    "jira>=3.8.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.128.0",
    "google-auth-httplib2>=0.2.0",

    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Observability
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",

    # Utilities
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
opsgraph = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]